--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "Jamnong",
   "version": "0.0.1",
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.2.0"
   }
 }
