--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "repository": "git@git.proteus-tech.com:kirit/jamnong.git",
   "devDependencies": {
     "gulp": "~3.8.7",
-    "gulp-less": "~1.3.3"
+    "gulp-less": "~1.3.3",
+    "underscore": "~1.6.0"
   }
 }
