--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
-    "requirejs": "~2.1.14"
+    "requirejs": "~2.1.14",
+    "angularjs": "~1.2.22"
   }
 }
