--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "gulp": "~3.8.7",
     "gulp-less": "~1.3.3",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "gulp-jasmine": "~1.0.0"
   }
 }
