--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
     "requirejs": "~2.1.14",
-    "angularjs": "~1.2.22"
+    "angularjs": "~1.2.22",
+    "jasmine": "~2.0.1",
+    "angular-mocks": "~1.2.22"
   }
 }
