--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "jamnong",
-  "version": "0.0.1",
+  "name": "beanbag-seed",
+  "version": "0.0.2",
   "description": "Requirements capture",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "author": "Kirit Saelensminde",
   "license": "Copyright 2014 Felspar Co. Ltd.",
@@ -13,6 +13,13 @@
     "gulp": "~3.8.7",
     "gulp-less": "~1.3.3",
     "underscore": "~1.6.0",
-    "gulp-jasmine": "~1.0.0"
+    "phantomjs": "~1.9.7-15",
+    "gulp-jshint": "~1.8.4",
+    "jshint-stylish": "~0.4.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-unzip": "~0.1.1",
+    "minimatch": "~1.0.0",
+    "gulp-rimraf": "~0.1.0",
+    "glob": "~4.0.5"
   }
 }
