--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Jamnong",
-  "version": "0.0.1",
+  "name": "beanbag-seed",
+  "version": "0.0.2",
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
