--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "requirejs": "~2.1.14",
     "angularjs": "~1.2.22",
     "jasmine": "~2.0.1",
-    "angular-mocks": "~1.2.22"
+    "angular-mocks": "~1.2.22",
+    "markdown": "~0.5.0"
   }
 }
